<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/adapter_light_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:background="#CDC2986B">
    <LinearLayout
        android:id="@+id/device_one"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/adapter_control_light_off">
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/light_picture_one"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/light_off_24dp"/>
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp">
                <TextView
                    android:id="@+id/device_name_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="70dp"
                    android:text="@string/device_one"
                    android:textSize="18sp"
                    android:textColor="@color/text_default"/>
                <TextView
                    android:id="@+id/data_one"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:paddingLeft="30dp"
                    android:background="#CDC2986B"
                    android:scrollbars="vertical"
                    android:fadeScrollbars="false"
                    android:textSize="14sp"
                    android:textColor="@color/text_default"  />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <Switch
                    android:id="@+id/switch_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/device_two"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/adapter_control_light_off">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/light_picture_two"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/light_off_24dp"/>
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp">
                <TextView
                    android:id="@+id/device_name_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="70dp"
                    android:text="@string/device_two"
                    android:textSize="18sp"
                    android:textColor="@color/text_default"/>
                <TextView
                    android:id="@+id/data_two"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:paddingLeft="30dp"
                    android:background="#CDC2986B"
                    android:scrollbars="vertical"
                    android:fadeScrollbars="false"
                    android:textSize="14sp"
                    android:textColor="@color/text_default"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Switch
                    android:id="@+id/switch_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/device_three"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/adapter_control_light_off">
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/light_picture_three"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/light_off_24dp"/>
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp">
                <TextView
                    android:id="@+id/device_name_three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="70dp"
                    android:text="@string/device_three"
                    android:textSize="18sp"
                    android:textColor="@color/text_default"/>
                <TextView
                    android:id="@+id/data_three"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:paddingLeft="30dp"
                    android:background="#CDC2986B"
                    android:scrollbars="vertical"
                    android:fadeScrollbars="false"
                    android:textSize="14sp"
                    android:textColor="@color/text_default"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Switch
                    android:id="@+id/switch_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/all_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/all_start"/>
        <Button
            android:id="@+id/all_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:textSize="15sp"
            android:text="@string/all_stop"/>
    </LinearLayout>
</LinearLayout>